k8s/frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend-app
  namespace: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      name: frontend-app
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: dmoayad/authentication_app_frontend:latest
          ports:
            - containerPort: 3000
