k8s/frontend_clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-service
  namespace: auth-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend-app
